Done : Enhanced Cancellation Process 1.Prompt Added for cancel 2.Cancelled Tickets hidden are overflow fixed 3.Cancellation for Trains Today are hidden
glitch in logout fixed (calling logout after logging out cased exception)
UI improvement
results chunked into 10s
booked tickets cancellation buttons modified
debit card spell corrected in payment servlet
Cancellation of completed Tickets Stopped
Queries optimised ( Improvements dore in Reservation )
Screenshots Added
SHA 512 ENCRYPTION Added From Passwords
QUERIES OPTIMISED (Except in Reservation)
colors changed
train 4 stop order corrected
New Train Universal Express Added(6 Stops)
Train Results UI Revamped
Date validation success
home button added to reserve seats
Auto Redirection added after successfull Registration
bug in registration page validation fixed
Validations added To each Servlets
Exception in Incorrect PNR Fixed
MYSQL Connectioned are moved to Separate Class
Train Routes Added in search Result
Registration converted to AJAX
Removed account creation success alert
login glitch fixed
train selection converted to buttons (Removed Radio btn)
session bug fixed
seatnumber bug fixed
Login made in ajax
Client Side validations done
Login mail notification will be displayed
Fixed First session opening causing exception

TO DO :
Use Joins to hit DB
Server side validation to be done
slightly optimised utilization of seat is needed

LOW PRIORITY:
DUMMY CARD PAGES

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -53,6 +53,7 @@ body{
 }
 
 .box input[type="submit"],.box input[type="button"], #subbutton{
+    cursor: pointer;
     border:0;
     display: block;
     text-align: center;
@@ -66,6 +67,7 @@ body{
 }
 
 #subbtn{
+    cursor: pointer;
     /* border:0; */
     /* display: block; */
     text-align: center;
@@ -95,6 +97,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #bpnr, #bhistory, #blogout, #home, #topleftbtn{
+    cursor: pointer;
     z-index: 10;
     border:0;
     display: block;
@@ -129,6 +132,7 @@ input[type=number]::-webkit-outer-spin-button {
     display: none;
 }
 #blogout{
+    cursor: pointer;
     position: fixed;
     top: 0px !important;
     right: 10px;
@@ -141,6 +145,7 @@ input[type=number]::-webkit-outer-spin-button {
     display: none;
 }
 #home, #topleftbtn{
+    cursor: pointer;
     position: fixed;
     top: 0px !important;
     left: 0px;
@@ -182,7 +187,7 @@ label{
   }
 
 @media print {
-    #cbtn {
+    #cbtn, #blogout, #home {
         display: none !important;
     }
 }
