--- a/web/css/ticketpage.css
+++ b/web/css/ticketpage.css
@@ -49,6 +49,7 @@ body{
 }
 
 .box input[type="submit"], #subbutton{
+    cursor: pointer;
     border:0;
     display: block;
     text-align: center;
@@ -60,18 +61,18 @@ body{
     color: white;
     border-radius: 25px;
 }
-.box input[type="button"]{
-    border:0;
-    display: block;
-    text-align: center;
-    background: none;
-    margin: 20px auto;
-    border: 2px solid #2d3436;
-    padding: 14px 40px;
-    outline: none;
-    color: white;
-    border-radius: 25px;
-}
+/*.box input[type="button"]{*/
+/*    border:0;*/
+/*    display: block;*/
+/*    text-align: center;*/
+/*    background: none;*/
+/*    margin: 20px auto;*/
+/*    border: 2px solid #2d3436;*/
+/*    padding: 14px 40px;*/
+/*    outline: none;*/
+/*    color: white;*/
+/*    border-radius: 25px;*/
+/*}*/
 
 .box input[type="submit"]:hover , #subbutton:hover, #bpnr:hover, #blogout:hover, #home:hover, #bhistory:hover, #addbtn:hover{
     background: #2ecc71;
@@ -108,6 +109,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #blogout,#addbtn, #home{
+    cursor: pointer;
     z-index: 10;
     border:0;
     display: block;
@@ -173,6 +175,7 @@ h2{
       color: white;
   }
   #canbtn{
+      cursor: pointer;
       background-color: #f44336;
       color: white;
       padding: 14px 25px;
@@ -190,12 +193,14 @@ h2{
     display: none;
 }
 #home, #topleftbtn{
+    cursor: pointer;
     position: fixed;
     top: 0px !important;
     left: 0px;
 }
 
 #seatbtn{
+    cursor: pointer;
     text-align: center;
     background: white !important;
     /* margin: 20px auto; */
